--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "angular-registration-login-example",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "User registration-authorization",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "node-static": "0.7.9",
   },
   "author": "Sergey Belous",
   "license": "ISC"
